--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       <app-work-experience></app-work-experience>
     </td>
     <td>
-      sprint 2 here...
+      sprint 2 here...(hotfixes)
     </td>
   </tr>
 </table>
