se suben archivos a header #1

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,22 @@
-<p>header works!</p>
+<table>
+    <tr>
+        <td> 
+            <p>
+                {{name}}<br>
+                {{charges}}
+            </p>
+            <p>
+             {{objetive}}
+            </p>
+        </td>
+        <td>
+            <p>{{image}}</p>
+        </td>
+        <td>
+            {{email}} <br>
+            {{cel}} <br>
+            {{ubication}} <br>
+            {{social}}<br>
+        </td>
+    </tr>
+</table>
