agragamos el commit #1

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,14 @@
             </p>
         </td>
         <td>
-            <p>{{image}}</p>
+            <table>
+                <tr>
+                    
+                    <td><img src="{{image}}" alt="Descripción de la imagen"></td>
+                    
+                </tr>
+            </table>
+            
         </td>
         <td>
             {{email}} <br>
