--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,29 @@
-<p>header works!</p>
+<table>
+    <tr>
+        <td> 
+            <p>
+                {{name}}<br>
+                {{charges}}
+            </p>
+            <p>
+             {{objetive}}
+            </p>
+        </td>
+        <td>
+            <table>
+                <tr>
+                    
+                    <td><img src="{{image}}" alt="Descripción de la imagen"></td>
+                    
+                </tr>
+            </table>
+            
+        </td>
+        <td>
+            {{email}} <br>
+            {{cel}} <br>
+            {{ubication}} <br>
+            {{social}}<br>
+        </td>
+    </tr>
+</table>
